snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2.pom.sha1
e5217eb2ad2d13526f81a4a144b593935bab5933